# tg-gifts-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  index.md  quickstart.md
docs/tutorials/: arbitrage-detection.md  floor-monitoring.md  trait-aware-scoring.md
examples/: basic_floor_scan.py  deal_detector.py
src/tg_gifts_sdk/: __init__.py  _http.py  aggregate.py  exceptions.py  fragment.py  models.py  portals.py  scoring.py  tonnel.py  unified.py
tests/: conftest.py  test_fragment_stub.py  test_models.py  test_portals_stub.py  test_scoring.py  test_smoke.py  test_tonnel_client.py  test_unified.py
